--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>PiJS</title>
+    <title>PiJS.app</title>
     <link rel="shortcut icon" href="/favicon.ico" />
 
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
@@ -10,15 +10,15 @@
 
     <meta
       name="description"
-      content="PiJS is a React PWA and Secure SSL Node/Express server running on a Raspberry Pi 4"
+      content="PiJS.app is a React Progressive Web Application"
     />
     <meta
       property="og:description"
-      content="PiJS is a React PWA and Secure SSL Node/Express server running on a Raspberry Pi 4"
+      content="PiJS.app is a React Progressive Web Application"
     />
     <meta
       name="twitter:description"
-      content="PiJS is a React PWA and Secure SSL Node/Express server running on a Raspberry Pi 4"
+      content="PiJS.app is a React Progressive Web Application"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="/manifest.json" />
@@ -41,7 +41,6 @@
       name="msapplication-TileImage"
       content="png/windows-tile/windows-tile-300x300.png"
     />
-    
     
     <link
       rel="apple-touch-icon"
