--- a/public/index.html
+++ b/public/index.html
@@ -171,11 +171,14 @@
     <style>
       body {
         margin: 0;
-        background-color: '#212121',
+        background-color: '#212121' !important;
         font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
           monospace;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+      }
+      #pijs {
+        background: #F1DD3F;
       }
     </style>
   </head>
