--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
     <link rel="shortcut icon" href="/favicon.ico" />
 
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css" rel="stylesheet" />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
 
     <meta
       name="description"
@@ -35,13 +38,13 @@
     <meta name="apple-mobile-web-app-title" content="PiJS" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="msapplication-TileColor" content="#212121" />
-    
+
     <meta name="msapplication-config" content="browserconfig.xml" />
     <meta
       name="msapplication-TileImage"
       content="png/windows-tile/windows-tile-300x300.png"
     />
-    
+
     <link
       rel="apple-touch-icon"
       href="png/apple-touch/apple-touch-icon-180x180.png"
@@ -171,15 +174,14 @@
     <style>
       body {
         margin: 0;
-        background-color: '#212121' !important;
-        font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        background-color: "#212121" !important;
+        font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
           monospace;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
       #pijs {
-        background: #F1DD3F;
-      }
+        background: rgba(33, 33, 33, 1);
     </style>
   </head>
 
