remove mapbox css

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,6 @@
     <meta charset="utf-8" />
     <title>PiJS.app</title>
     <link rel="shortcut icon" href="/favicon.ico" />
-
-    <script src="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
-    <link
-      href="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css"
-      rel="stylesheet"
-    />
     <meta
       name="description"
       content="PiJS.app is an Open Source Progressive Web Application using React"
@@ -199,7 +193,7 @@
       }
       #pijs p {
         margin: auto;
-        max-width: 75%;
+        max-width: 220px;
         padding-top: 16px;
       }
     </style>
@@ -257,7 +251,7 @@
             rel="”noreferrer”"
             >Open Source</a
           >
-          Progressive Web Application using React
+          React Progressive Web App
         </p>
       </div>
     </div>
