--- a/public/index.html
+++ b/public/index.html
@@ -255,5 +255,11 @@
         </p>
       </div>
     </div>
+
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
   </body>
 </html>
