--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>PiJS.app</title>
+    <title>&amp;</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta
       name="description"
@@ -159,19 +159,20 @@
       media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <style>
+      
       body {
         margin: 0;
-        font-family: "Roboto", serif;
-        font-size: 1rem;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
+
+      h1 { font-family: Geneva, Tahoma, Verdana, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } h3 { font-family: Geneva, Tahoma, Verdana, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: Geneva, Tahoma, Verdana, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: Geneva, Tahoma, Verdana, sans-serif; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: Geneva, Tahoma, Verdana, sans-serif; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
+
       #pijs {
-        background: #000000;
-        height: 100vh;
-        color: white;
+        /* height: 100vh;
+        width: 100vw;
         display: flex;
-        flex-direction: column;
+        flex-direction: column; */
       }
       #pijs .pijs-logo {
         padding-top: 16px;
@@ -186,26 +187,23 @@
       }
       #pijs a {
         text-decoration: none;
-        color: white;
+        color: whblackte;
       }
       #pijs a:hover {
         color: rgba(241, 221, 63, 1);
-      }
-      #pijs p {
-        margin: auto;
-        max-width: 220px;
-        padding-top: 16px;
       }
     </style>
   </head>
 
   <body>
-    <div id="pijs"></div>
+    <div id="pijs">
+      SSR
+    </div>
 
-    <script src="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
+    <!-- <script src="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css"
       rel="stylesheet"
-    />
+    /> -->
   </body>
 </html>
