--- a/public/index.html
+++ b/public/index.html
@@ -159,47 +159,38 @@
       media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <style>
-      
       body {
+        height: 100%;
         margin: 0;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+        font-family: Geneva, Tahoma, Verdana, sans-serif;
+        font-size: 1rem;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: 400;
+        line-height: 20px;
       }
-
-      h1 { font-family: Geneva, Tahoma, Verdana, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } h3 { font-family: Geneva, Tahoma, Verdana, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: Geneva, Tahoma, Verdana, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: Geneva, Tahoma, Verdana, sans-serif; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: Geneva, Tahoma, Verdana, sans-serif; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
-
-      #pijs {
-        /* height: 100vh;
-        width: 100vw;
+      #react {
+        height: 100vh;
+        background: rgba(0,0,0,0.1);
         display: flex;
-        flex-direction: column; */
+        justify-content: center;
+        align-items: center;
       }
-      #pijs .pijs-logo {
-        padding-top: 16px;
-        text-align: center;
-      }
-      #pijs .app-name {
-        text-align: center;
-        padding-top: 32px;
-      }
-      #pijs h1 {
-        font-weight: normal;
-      }
-      #pijs a {
-        text-decoration: none;
-        color: whblackte;
-      }
-      #pijs a:hover {
-        color: rgba(241, 221, 63, 1);
+      .thething {
+        background: rgba(0,0,0,0.4);
       }
     </style>
   </head>
 
   <body>
-    <div id="pijs">
-      SSR
+    <div id="react" class="pijs">
+      <div class="thething">
+        SSR
+      </div>
     </div>
-
+      
     <!-- <script src="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css"
