--- a/public/index.html
+++ b/public/index.html
@@ -173,13 +173,14 @@
       }
       #react {
         height: 100vh;
-        background: rgba(0,0,0,0.1);
+        background: rgba(0,0,0,0.01);
         display: flex;
         justify-content: center;
         align-items: center;
       }
       .thething {
-        background: rgba(0,0,0,0.4);
+        background: rgba(0,0,0,0.1);
+        padding: 25px;
       }
     </style>
   </head>
