--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>&amp;</title>
+    <title></title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta
       name="description"
