Common Styles!! yay.

--- a/public/index.html
+++ b/public/index.html
@@ -185,9 +185,9 @@
 
   <body>
     <div id="react" class="pijs">
-      <div class="thething">
+      <!-- <div class="thething">
         SSR
-      </div>
+      </div> -->
     </div>
       
     <!-- <script src="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
