--- a/public/index.html
+++ b/public/index.html
@@ -216,10 +216,10 @@
       <h1 class="h1Tag">PiJS.app</h1>
     </div>
 
-    <!-- <script src="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css"
       rel="stylesheet"
-    /> -->
+    />
   </body>
 </html>
