--- a/public/index.html
+++ b/public/index.html
@@ -186,6 +186,11 @@
         color: rgba(241, 221, 63, 1);
         font-weight: normal;
       }
+
+      .mapboxgl-ctrl-icon.mapboxgl-ctrl-zoom-in {
+        color: white;
+        background-color: black;
+      }
     </style>
   </head>
 
